--- a/Task Timer/src/main/res/values/strings.xml
+++ b/Task Timer/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
 	<string name="app_name">Task Timer</string>
 
+	<string name="task_name_prompt">Task</string>
+	<string name="start">Start</string>
+	<string name="clear">Clear</string>
+
 </resources>
